applications/memory-service/resources/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: memory-service
spec:
  type: ClusterIP
  selector:
    app: memory-service
  ports:
    - name: http
      port: 8000
      targetPort: http
