applications/memory-service/resources/ciliumnetworkpolicy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: memory-service
spec:
  endpointSelector:
    matchLabels:
      app: memory-service
  ingress:
    - fromEntities:
        - ingress
      toPorts:
        - ports:
            - port: "8000"
              protocol: TCP
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: higress-system
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: monitoring
      toPorts:
        - ports:
            - port: "8000"
              protocol: TCP
